# xxx

./: Cargo.toml  README.md  h -u origin main
.github/workflows/: PQC Integration CI.yml  ci.yml
backup_20250722_230641/tests/: mod.rs
backup_20250722_230641/utils/adds/: mod.rs  secure.rs  tls.rs
backup_20250722_230641/utils/etl/: pipeline.rs
benches/: benchmarks.rs
docs/: Compatibility Matrix (KPI)  Compatibility Matrix (KPI).md  Comprehensive_Performance_Analysis.md  Final_Report.md  Goals for PQC Implementation.md  Literature & Standards Review (KPI).md  Performance-Report.md  Research_Plan.md  Tool and Library Selection for PQC.md  the goals to implement PQC.md
docs/literature/: # Research on Quantum-Resistant Cryptosystems.md  Literature Review of NIST PQC Algorithms.md  Regulatory and Industry Requirements.md  Summaries_of_all_10_required_articles.md
docs/other/: Optimization Ideas for PQC Kyber.md
docs/publications/: Kyber_Implementation_Workshop.md  Kyber_Implementation_for_Financial_System.md  Kyber_Integration_in_Financial_Systems.md  Our_Journey_with_Kyber.md
examples/: basic_usage.rs
kms/: keygen.rs
src/: config.rs  lib.rs  main.rs
src/BMD_PY/: Behavioral_Authentication_ML.md  data_generator.py  feature_schema.json  main.py  model_features.json  risk_model.pkl  risk_model_eval.md  synthetic_behavioral_data.csv
src/adds/: kms.rs  mod.rs  secure.rs  tls.rs  validation.rs
src/analysis/: comparative.rs
src/api/: mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/core/analysis/: comparative.rs  mod.rs
src/crypto/: mod.rs
src/crypto/secure/: secret.rs
src/data_generator/: mod.rs
src/dilithum/: mod.rs
src/etl/: batch.rs  etl_tests.rs  metrics.rs  mod.rs  pipeline.rs  transaction.rs
src/hsm/: aws_cloudhsm.rs  azure_keyvault.rs  mod.rs
src/integration/: mod.rs
src/integration/api/: mod.rs
src/kem/: mod.rs
src/kyber1024/: mod.rs
src/kyber768/: mod.rs
src/monitoring/: metrics.rs
src/optimizations/: avx512.rs
src/risk_scoring_Python_ML/: verify_setup.py
src/risk_scoring__(Python_ML)/: _init_.py  data_handler.py  model.py  trainer.py
src/security/: audit.rs  mod.rs  penetration_tests.rs
src/sphinc/: mod.rs
src/stress_tests/: mod.rs  reporter.rs  scenarios.rs
src/tests/: mod.rs  performance_test.rs
src/types/: mod.rs
src/utils/: mod.rs  time_utils.rs  timestamp_utils.rs  validation.rs
src/utils/analysis/: mod.rs
src/utils/data_generator/: mod.rs
src/utils/etl/: batch.rs  etl_tests.rs
src/variants/: mod.rs
src_backup/: lib.rs
src_backup/core/: mod.rs
src_backup/crypto/: kem.rs
src_backup/crypto/kms/: mod.rs
src_backup/integration/etl/: metrics.rs
src_backup/variants/: kyber1024.rs
