[package]
name = "pqc_kyber"
version = "0.1.0"
edition = "2024"

[features]
default = []
pqc = []
web-demo = []
metrics = []

[dependencies]
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
rand = "0.9.1"
rsa = { version = "0.9.6", features = ["serde", "pem"] }
rand_core = "0.9.3"
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17.7"
p256 = { version = "0.13.2", features = ["ecdh"] }
csv = "1.3.1"
once_cell = "1.8"
uuid = { version = "1.0", features = ["v4"] }
zeroize = { version = "1.5", features = ["zeroize_derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.12"
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
sysinfo = "0.35.2"
statistical = "1.0"
sha3 = "0.11.0-rc.0"
serde_json = "1.0.140"
async-trait = "0.1.88"
tracing = "0.1.41"
reqwest = "0.12.22"

[dev-dependencies]
criterion = "0.6.0"
tempfile = "3.2"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3