[package]
name = "pqc_kyber"
version = "0.1.0"
edition = "2021"

[lib]
name = "pqc_kyber"
path = "src/lib.rs"

[[bin]]
name = "kyber-api"
path = "api/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
zeroize = "1.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"